# MiMoChat-Desktop

./: .gitignore  README.md  beautiful.html  build-installer.ps1  eslint.config.js  generate-icons.ps1  index.html  package-lock.json  package.json  vite.config.ts
app/skills/: Official-corporate-explainer.md  api-builder.md  bug-hunter.md  code-explainer.md  code-review.md  code-to-visual-explain.md  doc-generator.md  quick.md  refactor-master.md  research.md  security-auditor.md  sql-expert.md  test-writer.md  translate.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChatApp.tsx  LanguagePicker.tsx  SettingsDialog.tsx  SkillsManager.tsx  SlashCommandMenu.tsx  SubtitleTranslator.tsx
src/lib/: subtitle.ts
src/store/: settingsStore.ts
